--- a/templates/admin/adminUser.html.twig
+++ b/templates/admin/adminUser.html.twig
@@ -32,7 +32,7 @@
              <div class="col-lg-12 bugInsideFormSpaces">
               {{ form_row(userForm.email, {'label':'Email:', 'attr': {'class': 'inputBugForm'}}) }}
               {{ form_row(userForm.roles, {'label':'Rôle:', 'attr': {'class': 'searchFormPage inputBugForm'}}) }}
-              {{ form_row(userForm.password, {'label':'Password:', 'attr': {'class': 'inputBugForm'}}) }}
+              {{ form_row(userForm.plainPassword, {'label':'Password:', 'attr': {'class': 'inputBugForm'}}) }}
               {{ form_row(userForm.pseudonym, {'label':'Pseudonyme:', 'attr': {'class': 'inputBugForm'}}) }}
               {{ form_row(userForm.avatar, {'label':'Avatar:', 'attr': {'class': 'inputBugForm'}}) }}
               {{ form_row(userForm.locked, {'label':'Bloqué :', 'attr': {'class': 'inputBugForm'}}) }}
