--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -23,9 +23,12 @@
         <div class="row">
         <h1>Reset your password</h1>
 
-    {{ form_start(resetForm) }}
-        {{ form_row(resetForm.plainPassword) }}
-        <button class="btn btn-primary">Reset password</button>
+    {{ form_start(resetForm, {'method': 'POST', 'attr':{'id': 'search-form', 'name': 'resetPasswordForm', 'class': 'bugForm'}}) }}
+        {{ form_row(resetForm.plainPassword, {'attr': {'class': 'inputBugForm'} }) }}
+        <div class="col-lg-4"><button class="main-button buttonStyle">Reset password</button></div>
+        <div class="col-lg-4"></div>
+        <div class="col-lg-4"></div>
+        
     {{ form_end(resetForm) }}
 
     </div>
