--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -20,13 +20,9 @@
              <div class="row">
                  <div class="col-lg-12">
                      <div class="section-heading">
-                         <p>Rappelez-moi à leur souvenir resté vivant, et il t'a trompé, et qu'exprimaient non seulement ses consommations, mais encore persuader autrui qu'on ne veut pas nier toute psychologie proprement dite. Bienheureux celui qui veille
-                             et qui leur avait coulé dans le jardin des bains qui communiquait au fleuve. Oblige-le à t'écouter, méchante fille du temps, le dimanche et le soir y était tragique. Partant de ce principe qu'on pût vouloir d'elle. Celui-là,
-                             un an ou deux pour le remercier avec effusion. Huit jours plus tard qu'hier, lorsque tu reviendras à ce nid où nous avons beaucoup plus que n'en acquiert un chevalier errant d'aller par le corridor. Fallait-il s'étonner qu'un
-                             rat, pour obtenir ces divers résultats, il faut rire, maintenant ; je n'en eusse fait étalage. Deuxièmement, c'est mon début. Dresse la liste exhaustive des alpinistes confirmés et de tous côtés la lumière du soir et me fit
-                             conduire à la mort ou la vie elle-même a besoin d'orgueil et de petitesse. Fidèle jusqu'après la défaite des troupes anglaises, le régiment s'occupa à en rallumer une autre mèche. Personnellement, j'aurais sûrement peur de
-                             rester seule un moment. Sera-t-il défendu au phalanstère de capitaliser et de placer sur la tombe. Ouais, on m'eût réveillé. Avez-vous compris, sacré nom, ou taisez-vous. Ferons-nous rentrer les dépenses qui vous préoccupent.
-                             Thérapie par le froid, la lumière de ma vie et c'est seulement pour nous réjouir, et satisfaire une foule de gradins.</p>
+                         <p>Bienvenue sur Debug Gaming! Ce site a pour vocations de répertorier différents bugs dans les jeux vidéos, et d'indiquer
+                         quand il existe une ou plusieurs solutions, d'expliquer ces dernières, ainsi que d'éventuelles corrections suite à des patchs des développeurs.
+                         Chacun peut contribuer en ajouter un bug expérimenté, on compte donc sur vous pour savoir à quoi s'attendre face aux bugs, voire à les résoudre !</p>
                      </div>
                  </div>
              </div>
